--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node-cron": "^3.0.2",
     "path": "^0.12.7",
     "sequelize": "^6.26.0",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
